[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Scenes/World/World.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/World/background.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/World/combometer.png" type="Texture" id=3]
[ext_resource path="res://src/Resources/font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Scenes/LostPanel/LostPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Objects/Center/Center.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Objects/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Scenes/World/music_2.wav" type="AudioStream" id=8]
[ext_resource path="res://src/Scenes/PausedPanel/PausedPanel.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="BG" type="Sprite" parent="." index="0"]

scale = Vector2( 720, 720 )
z_index = -10
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="ComboMeter" type="TextureProgress" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
fill_mode = 5
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Score" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Score: "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Combo" type="Label" parent="." index="3"]

visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "x1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="LostPanel" parent="." index="4" instance=ExtResource( 5 )]

margin_left = 320.0
margin_top = 320.0
margin_right = 400.0
margin_bottom = 400.0

[node name="ScoreTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="ComboTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="Center" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 360, 360 )

[node name="Player" parent="." index="8" instance=ExtResource( 7 )]

position = Vector2( 360, 360 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Music"

[node name="PausedPanel" parent="." index="10" instance=ExtResource( 9 )]

visible = false
margin_left = 110.0
margin_top = 60.0
margin_right = 614.0
margin_bottom = 212.0

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]


